fix: overlapping chart

--- a/apps/web/emr/src/pages/dashboard/statistics/StatsGrid.module.css
+++ b/apps/web/emr/src/pages/dashboard/statistics/StatsGrid.module.css
@@ -57,6 +57,7 @@
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
     border-radius: 10px;
     padding: 5px;
+    margin-bottom: 20px;
   }
 
   .areaChartTitle{
